# AtlasSeries

./: .gitignore  README.md
CppProjects/LPRecognition/: CMakeLists.txt  lprecognition.cpp  lprecognition.h  main.cpp  path_operate.h  utils.cpp  utils.h
CppProjects/LPRecognition/common/: model_process.cpp  model_process.h
CppProjects/LPRecognition/models/: README.md
CppProjects/Retinaface/: CMakeLists.txt  main.cpp  path_operate.h  retinaface.cpp  retinaface.h  utils.cpp  utils.h
CppProjects/Retinaface/common/: ascend_inference.cpp  ascend_inference.h  model_process.cpp  model_process.h
CppProjects/Retinaface/include/ncnn/: platform.h
CppProjects/Segmentation/: CMakeLists.txt  README.md  example.cpp  model_process.cpp  model_process.h  segmentation.cpp  segmentation.h  segmentation_infer.cpp  segmentation_infer.h  utils.cpp  utils.h
CppProjects/Segmentation/models/: README.md
CppProjects/Yolov5Detection/: CMakeLists.txt  dvpp_cropandpaste.cpp  dvpp_cropandpaste.h  main.cpp  model_process.cpp  model_process.h  object_detect_yolov5_bgr.cpp  object_detect_yolov5_bgr.h  path_operate.h  timer.hpp  utils.cpp  utils.h
ModelExport/LPR_export/: LPR_export.py  README.md  lpr_align.py  onnx_model.py  test_model.py
ModelExport/RetinaFace_export/: README.md  retinaface_export.py
ModelExport/RetinaFace_export/models/: net.py  retinaface.py
ModelExport/yolov5_export/: README.md
ModelExport/yolov5_export/models/: common.py  export.py
ModelExport/yolov5_export/utils/google_app_engine/: additional_requirements.txt
